; ModuleID = '/home/carl/AnghaBench/nanomsg/src/transports/inproc/extr_sinproc.c_nn_sinproc_term.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/transports/inproc/extr_sinproc.c_nn_sinproc_term.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_sinproc = type { i32, i32, i32, i32, i32, i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_sinproc_term(%struct.nn_sinproc* %0) #0 {
  %2 = alloca %struct.nn_sinproc*, align 8
  store %struct.nn_sinproc* %0, %struct.nn_sinproc** %2, align 8
  %3 = load %struct.nn_sinproc*, %struct.nn_sinproc** %2, align 8
  %4 = getelementptr inbounds %struct.nn_sinproc, %struct.nn_sinproc* %3, i32 0, i32 8
  %5 = call i32 @nn_list_item_term(i32* %4)
  %6 = load %struct.nn_sinproc*, %struct.nn_sinproc** %2, align 8
  %7 = getelementptr inbounds %struct.nn_sinproc, %struct.nn_sinproc* %6, i32 0, i32 7
  %8 = call i32 @nn_fsm_event_term(i32* %7)
  %9 = load %struct.nn_sinproc*, %struct.nn_sinproc** %2, align 8
  %10 = getelementptr inbounds %struct.nn_sinproc, %struct.nn_sinproc* %9, i32 0, i32 6
  %11 = call i32 @nn_fsm_event_term(i32* %10)
  %12 = load %struct.nn_sinproc*, %struct.nn_sinproc** %2, align 8
  %13 = getelementptr inbounds %struct.nn_sinproc, %struct.nn_sinproc* %12, i32 0, i32 5
  %14 = call i32 @nn_fsm_event_term(i32* %13)
  %15 = load %struct.nn_sinproc*, %struct.nn_sinproc** %2, align 8
  %16 = getelementptr inbounds %struct.nn_sinproc, %struct.nn_sinproc* %15, i32 0, i32 4
  %17 = call i32 @nn_fsm_event_term(i32* %16)
  %18 = load %struct.nn_sinproc*, %struct.nn_sinproc** %2, align 8
  %19 = getelementptr inbounds %struct.nn_sinproc, %struct.nn_sinproc* %18, i32 0, i32 3
  %20 = call i32 @nn_msg_term(i32* %19)
  %21 = load %struct.nn_sinproc*, %struct.nn_sinproc** %2, align 8
  %22 = getelementptr inbounds %struct.nn_sinproc, %struct.nn_sinproc* %21, i32 0, i32 2
  %23 = call i32 @nn_msgqueue_term(i32* %22)
  %24 = load %struct.nn_sinproc*, %struct.nn_sinproc** %2, align 8
  %25 = getelementptr inbounds %struct.nn_sinproc, %struct.nn_sinproc* %24, i32 0, i32 1
  %26 = call i32 @nn_pipebase_term(i32* %25)
  %27 = load %struct.nn_sinproc*, %struct.nn_sinproc** %2, align 8
  %28 = getelementptr inbounds %struct.nn_sinproc, %struct.nn_sinproc* %27, i32 0, i32 0
  %29 = call i32 @nn_fsm_term(i32* %28)
  ret void
}

declare dso_local i32 @nn_list_item_term(i32*) #1

declare dso_local i32 @nn_fsm_event_term(i32*) #1

declare dso_local i32 @nn_msg_term(i32*) #1

declare dso_local i32 @nn_msgqueue_term(i32*) #1

declare dso_local i32 @nn_pipebase_term(i32*) #1

declare dso_local i32 @nn_fsm_term(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
